# rps_clase

./: README.md  pyproject.toml
src/rps_clase/: main.py
src/test/: test_proba.py
